--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <!-- summary -->
                     <div class="home__data">
-                        <h1 id="user-detail-name" class="home__title">Hi, I'm chikkuuu</h1>
+                        <h1 id="user-detail-name" class="home__title">Hi, I'm Mayank Raj</h1>
                         <h3 class="home__subtitle">Backend developer</h3>
                         <p class="home__description" id="user-detail-intro">Highly skilled backend developer adept at
                             contributing to a highly collaborative work environment.
@@ -488,49 +488,54 @@
 
                         <div class="skills__list grid">
                             <div class="skills__data skills-card ">
-                                <div class="skills__titles skills-card-name">
-                                    <h3 class="skills__name">HTML</h3>
+                                <div class="skills__titles ">
+                                    <h3 class="skills__name skills-card-name">HTML</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
-                                <div class="skills__bar skills-card-img">
+                                <div class="skills__bar">
+                                    <img class="skills-card-img fyouseek"  src="" alt="">
                                     <span class="skills__percentage skills__80"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data skills-card">
-                                <div class="skills__titles skills-card-name">
-                                    <h3 class="skills__name">CSS</h3>
+                                <div class="skills__titles ">
+                                    <h3 class="skills__name skills-card-name">CSS</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
-                                <div class="skills__bar skills-card-img">
+                                <div class="skills__bar">
+                                    <img class="skills-card-img fyouseek"  src="" alt="">
                                     <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
 
                             <div class="skills__data skills-card">
-                                <div class="skills__titles skills-card-name">
-                                    <h3 class="skills__name">JavaScript</h3>
+                                <div class="skills__titles ">
+                                    <h3 class="skills__name skills-card-name">JavaScript</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
-                                <div class="skills__bar skills-card-img">
+                                <div class="skills__bar">
+                                    <img class="skills-card-img fyouseek"  src="" alt="">
                                     <span class="skills__percentage skills__80"></span>
                                 </div>
                             </div>
                             <div class="skills__data skills-card">
-                                <div class="skills__titles skills-card-name">
-                                    <h3 class="skills__name">Boostrap</h3>
+                                <div class="skills__titles ">
+                                    <h3 class="skills__name skills-card-name">Boostrap</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
-                                <div class="skills__bar skills-card-img">
+                                <div class="skills__bar">
+                                    <img class="skills-card-img fyouseek"  src="" alt="">
                                     <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
                             <div class="skills__data skills-card">
-                                <div class="skills__titles skills-card-name">
-                                    <h3 class="skills__name">swiperjs</h3>
+                                <div class="skills__titles ">
+                                    <h3 class="skills__name skills-card-name">swiperjs</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
-                                <div class="skills__bar skills-card-img">
+                                <div class="skills__bar">
+                                    <img class="skills-card-img fyouseek"  src="" alt="">
                                     <span class="skills__percentage skills__70"></span>
                                 </div>
                             </div>
@@ -554,51 +559,66 @@
 
                     <div class="skills__list grid">
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Node JS</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Node JS</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Express JS</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Express JS</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
+                                <span class="skills__percentage skills__70"></span>
+                            </div>
+                        </div>
+                        <div class="skills__data skills-card">
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Redis</h3>
+                                <span class="skills__number">60%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
+                                <span class="skills__percentage skills__60"></span>
+                            </div>
+                        </div>
+
+                        <div class="skills__data skills-card">
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Mongoose</h3>
+                                <span class="skills__number">70%</span>
+                            </div>
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Mongoose</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">MongoDB</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">MongoDB</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Rest APIs</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
-                                <span class="skills__percentage skills__70"></span>
-                            </div>
-                        </div>
-
-                        <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Rest APIs</h3>
-                                <span class="skills__number">70%</span>
-                            </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
@@ -619,62 +639,68 @@
                     <div class="skills__list grid">
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">VS-Code | Codepan | Replit</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">VS-Code | Codepan | Replit</h3>
                                 <span class="skills__number">90%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__90"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Netlify | Vercel | cylic.sh</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Netlify | Vercel | cylic.sh</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Git & Github</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Git & Github</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Postman</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Postman</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Canva</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Canva</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">NPM</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">NPM</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
@@ -698,49 +724,54 @@
 
                     <div class="skills__list grid">
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Project Management</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Project Management</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Team Working</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Team Working</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
 
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Remotely Working</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Remotely Working</h3>
                                 <span class="skills__number">90%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__90"></span>
                             </div>
                         </div>
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Problem-Solving</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Problem-Solving</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
                         <div class="skills__data skills-card">
-                            <div class="skills__titles skills-card-name">
-                                <h3 class="skills__name">Adaptability</h3>
+                            <div class="skills__titles ">
+                                <h3 class="skills__name skills-card-name">Adaptability</h3>
                                 <span class="skills__number">70%</span>
                             </div>
-                            <div class="skills__bar skills-card-img">
+                            <div class="skills__bar">
+                                <img class="skills-card-img fyouseek"  src="" alt="">
                                 <span class="skills__percentage skills__70"></span>
                             </div>
                         </div>
