removved hidden class

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
 
 
         <!--==================== ABOUT ====================-->
-        <section class="about section" id="about">
+        <section class="about section" >
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle"></span>
 
             <div class="about__container container">
                 <img src="assets/img/about.png" alt="" class="about__img">
 
-                <div class="about__data">
+                <div class="about__data" id="about">
                     <p class="about__description">
                         Hi! I'm Mayank, I have a degree in Computer Science from MLSU University,Udaipur.
                         <br /><br />
@@ -838,14 +838,14 @@
 
             <div class="contact__container container grid">
                 <div>
-                    <div class="contact__information">
-                        <a href="https://www.instagram.com/mayank_raj____/" target="_blank">
-                            <i class="uil uil-instagram contact__icon"></i></a>
 
+                    <div class="contact__information">
+                        <a href="https://github.com/07-Mayankraj" target="_blank"><i
+                                class="uil uil-github contact__icon"></i></a>
                         <div>
-                            <h3 id="contact-phone" class="contact__title">Instagram</h3>
-                            <a href="https://www.instagram.com/mayank_raj____/" target="_blank"><span
-                                    class="contact__subtitle">@mayank_raj____</span></a>
+                            <h3 class="contact__title">GitHub</h3>
+                            <a id="contact-github" href="https://github.com/07-Mayankraj" target="_blank"><span
+                                    class="contact__subtitle">@07-Mayankraj</span></a>
                         </div>
                     </div>
 
@@ -859,26 +859,26 @@
                         </div>
                     </div>
 
-                    <div class="contact__information">
-                        <a href="https://github.com/07-Mayankraj" target="_blank"><i
-                                class="uil uil-github contact__icon"></i></a>
-                        <div>
-                            <h3 class="contact__title">GitHub</h3>
-                            <a id="contact-github" href="https://github.com/07-Mayankraj" target="_blank"><span
-                                    class="contact__subtitle">@07-Mayankraj</span></a>
-                        </div>
-                    </div>
 
                     <div class="contact__information">
-                        <a id="contact-email" href="mailto:fscoiety430@gmail.com"><i class="uil uil-envelope-alt contact__icon"></i></a>
+                        <a id="contact-email" href="mailto:2003.mayank.raj@gmail.com"><i class="uil uil-envelope-alt contact__icon"></i></a>
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <a href="mailto:fscoiety430@gmail.com"><span
-                                    class="contact__subtitle">fscoiety430@gmail.com</span></a>
+                            <a href="mailto:2003.mayank.raj@gmail.com"><span
+                                    class="contact__subtitle">2003.mayank.raj@gmail.com</span></a>
 
                         </div>
                     </div>
+                    <div class="contact__information">
+                        <a href="https://www.instagram.com/mayank_raj____/" target="_blank">
+                            <i class="uil uil-instagram contact__icon"></i></a>
 
+                        <div>
+                            <h3 id="contact-phone" class="contact__title">Instagram</h3>
+                            <a href="https://www.instagram.com/mayank_raj____/" target="_blank"><span
+                                    class="contact__subtitle">@mayank_raj____</span></a>
+                        </div>
+                    </div>
                     <div class="contact__information">
                         <i class="uil uil-map-marker contact__icon"></i>
                         <div>
