added fks removed fks

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="home__data">
                         <h1 id="user-detail-name" class="home__title">Hi, I'm Mayank Raj</h1>
                         <h3 class="home__subtitle">Backend developer</h3>
-                        <p class="home__description" id="user-detail-intro">Highly skilled backend developer adept at
+                        <p class="home__description">Highly skilled backend developer adept at
                             contributing to a highly collaborative work environment.
                             Designed and developed web applications across multiple APIs, third-party integrations and
                             databases.
@@ -156,7 +156,7 @@
                 <img src="assets/img/about.png" alt="" class="about__img">
 
                 <div class="about__data" id="about">
-                    <p class="about__description">
+                    <p class="about__description" id="user-detail-intro">
                         Hi! I'm Mayank, I have a degree in Computer Science from MLSU University,Udaipur.
                         <br /><br />
                         Currently I'm Learing Full Stack Web Development at Masai School.
