added fks removed fks

--- a/index.html
+++ b/index.html
@@ -148,14 +148,21 @@
 
 
         <!--==================== ABOUT ====================-->
-        <section class="about section" >
+        <section class="about section" id="about" >
+            <p class="fyouseek" id="user-detail-intro">I am a web developer proficient in
+                NodeJS Backend Tech. and DSA, with an ever-growing passion for 
+                implementing and launching new projects that have tangible outcomes for others.
+                Ability to work well in team-oriented and collaborative projects. Looking
+                forward to working in a company to augment my skills and
+                contribute significantly to the organization.
+                </p>
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle"></span>
 
             <div class="about__container container">
                 <img src="assets/img/about.png" alt="" class="about__img">
 
-                <div class="about__data" id="about">
+                <div class="about__data" >
                     <p class="about__description" id="user-detail-intro">
                         Hi! I'm Mayank, I have a degree in Computer Science from MLSU University,Udaipur.
                         <br /><br />
