added fks removed fks

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
                             <i class="uil uil-link-alt nav__icon"></i>ContactMe
                         </a>
                     </li>
+                    <!-- masai -->
+                    <a style="display:none;" href="./assets/pdf/resume.pdf" class="nav-link resume" id="resume-button-1" download>Resume <i class="fa fa-download"></i></a>
+                    <!-- masai -->
                     <li id="resume-button-1" class="nav__item nav-link resume">
-                        <a id="resume-link-1" class="nav__link" target="_blank"
+                        <a id="resume-link-1" download class="nav__link" target="_blank"
                             href="https://drive.google.com/file/d/1OI8GWhlvyHDxnxdIaXEa2jF14FzoD3PT/view">
                             <i class="uil uil-file-blank nav__icon"></i>Resume
                         </a>
@@ -809,6 +812,9 @@
                     <img id="github-top-langs" class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api/top-langs?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
+                    <!-- masai -->
+                    <img style="display:none;" id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en" alt="">
+                    <!-- masai -->
 
                     <img id="github-stats-card" class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en&theme=github_dark&hide_border=true"
@@ -816,7 +822,6 @@
 
                     <img class="portfolio__content grid swiper-slide"
                         src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=07-Mayankraj&theme=github_dark" />
-
                 </div>
 
                 <!-- Add Arrows -->
@@ -837,6 +842,7 @@
         <section class="contact section" id="contact">
             <h2 class="section__title">Contact</h2>
             <!-- <span class="section__subtitle">Get in touch</span> -->
+            <a style="display:none;" target="_blank"  id="contact-email"><p><i class="fa fa-envelope"></i> 2003.mayan.raj@gmail.com</p></a>
 
             <div class="contact__container container grid">
                 <div>
@@ -913,7 +919,7 @@
                     </div>
 
                     <div>
-                        <a href="mailto:fscoiety430@gmail.com" class="button button--flex">
+                        <a href="mailto:2003.mayank.raj@gmail.com" class="button button--flex">
                             Send Message
                             <i class="uil uil-comment-alt button__icon"></i>&nbsp&nbsp
                         </a>
