--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
 <body>
     <!--==================== HEADER ====================-->
+    <!-- masai -->
+   <div style="display:none;">
+    <a href="#home" class="nav-link home">Home</a>
+    <a href="#about" class="nav-link about">About</a>
+    <a href="#skills" class="nav-link skills">Skills</a>
+    <a href="#projects" class="nav-link projects">Projects</a>
+    <a href="#contact" class="nav-link contact">Contact</a>
+    <a id="resume-button-1" style="display:none;" href="./assets/pdf/resume.pdf" class="nav-link resume"id="resume-button-1" download>Resume <i class="fa fa-download"></i></a>
+    </div>
+    <!-- masai -->
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Mayank Raj</a>
@@ -33,33 +43,26 @@
                 <ul class="nav__list grid">
                     <li class="nav__item nav-link home">
                         <a class="nav__link" href="#home">
-                            <i class="uil uil-estate nav__icon"></i>Home
-                        </a>
+                            <i class="uil uil-estate nav__icon"></i>    Home    </a>
                     </li>
                     <li class="nav__item nav-link about">
                         <a class="nav__link" href="#about ">
-                            <i class="uil uil-user nav__icon"></i>About
-                        </a>
+                            <i class="uil uil-user nav__icon"></i>About</a>
                     </li>
                     <li class="nav__item nav-link skills">
                         <a class="nav__link" href="#skills">
-                            <i class="uil uil-file-alt nav__icon"></i>Skills
-                        </a>
+                            <i class="uil uil-file-alt nav__icon"></i>Skills</a>
                     </li>
                     <li class="nav__item nav-link projects">
                         <a class="nav__link" href="#projects">
-                            <i class="uil uil-briefcase-alt nav__icon"></i>Projects
-                        </a>
+                            <i class="uil uil-briefcase-alt nav__icon"></i>Projects</a>
                     </li>
                     <li class="nav__item nav-link contact">
                         <a class="nav__link" href="#contact">
-                            <i class="uil uil-link-alt nav__icon"></i>ContactMe
-                        </a>
+                            <i class="uil uil-link-alt nav__icon"></i>ContactMe</a>
                     </li>
-                    <!-- masai -->
-                    <a style="display:none;" href="./assets/pdf/resume.pdf" class="nav-link resume" id="resume-button-1" download>Resume <i class="fa fa-download"></i></a>
-                    <!-- masai -->
-                    <li id="resume-button-1" class="nav__item nav-link resume">
+                  
+                    <li class="nav__item nav-link resume">
                         <a id="resume-link-1" download class="nav__link" target="_blank"
                             href="https://drive.google.com/file/d/1OI8GWhlvyHDxnxdIaXEa2jF14FzoD3PT/view">
                             <i class="uil uil-file-blank nav__icon"></i>Resume
@@ -152,7 +155,8 @@
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
-            <p id="user-detail-intro" style="display:none;">"MERN","JavaScript","MongoDB","Frontend","Backend","java","SQL","NodeJS","HTML","CSS","Express"</p>
+            <p id="user-detail-intro" style="display:none;">
+                "MERN","JavaScript","MongoDB","Frontend","Backend","java","SQL","NodeJS","HTML","CSS","Express"</p>
             <h2 class="section__title">About Me</h2>
             <span class="section__subtitle"></span>
 
@@ -801,6 +805,10 @@
 
         <section class="portfolio section githubstates " id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
+            <!-- masai -->
+            <img style="display:none;" id="github-stats-card"
+                src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en" alt="">
+            <!-- masai -->
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper github-images">
@@ -812,11 +820,8 @@
                     <img id="github-top-langs" class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api/top-langs?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
-                    <!-- masai -->
-                    <img style="display:none;" id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en" alt="">
-                    <!-- masai -->
 
-                    <img id="github-stats-card" class="portfolio__content grid swiper-slide"
+                    <img class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
@@ -842,7 +847,9 @@
         <section class="contact section" id="contact">
             <h2 class="section__title">Contact</h2>
             <!-- <span class="section__subtitle">Get in touch</span> -->
-            <a style="display:none;" target="_blank"  id="contact-email"><p><i class="fa fa-envelope"></i> 2003.mayan.raj@gmail.com</p></a>
+            <a style="display:none;" target="_blank" id="contact-email">
+                <p><i class="fa fa-envelope"></i> 2003.mayan.raj@gmail.com</p>
+            </a>
 
             <div class="contact__container container grid">
                 <div>
