--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <!--==================== HEADER ====================-->
     <!-- masai -->
-   <div style="display:none;">
+   <div id="nav-menu" style="display:none;">
     <a href="#home" class="nav-link home">Home</a>
     <a href="#about" class="nav-link about">About</a>
     <a href="#skills" class="nav-link skills">Skills</a>
@@ -39,7 +39,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Mayank Raj</a>
-            <div class="nav__menu" id="nav-menu">
+            <div class="nav__menu" >
                 <ul class="nav__list grid">
                     <li class="nav__item nav-link home">
                         <a class="nav__link" href="#home">
@@ -817,7 +817,7 @@
                         src="https://github-readme-streak-stats.herokuapp.com?user=07-Mayankraj&theme=github-dark&hide_border=true&date_format=j%20M%5B%20Y%5D" />
 
 
-                    <img id="github-top-langs" class="portfolio__content grid swiper-slide"
+                    <img class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api/top-langs?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
