--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <!--==================== HEADER ====================-->
     <!-- masai -->
-   <div id="nav-menu" style="display:none;">
+   <div id="nav-menu" style="opacity: 0;">
     <a href="#home" class="nav-link home">Home</a>
     <a href="#about" class="nav-link about">About</a>
     <a href="#skills" class="nav-link skills">Skills</a>
@@ -806,7 +806,7 @@
         <section class="portfolio section githubstates " id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
             <!-- masai -->
-            <img style="display:none;" id="github-stats-card"
+            <img style="opacity: 0;position: absolute;" id="github-stats-card"
                 src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en" alt="">
             <!-- masai -->
 
@@ -817,7 +817,7 @@
                         src="https://github-readme-streak-stats.herokuapp.com?user=07-Mayankraj&theme=github-dark&hide_border=true&date_format=j%20M%5B%20Y%5D" />
 
 
-                    <img class="portfolio__content grid swiper-slide"
+                    <img  class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api/top-langs?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
