--- a/index.html
+++ b/index.html
@@ -806,8 +806,8 @@
         <section class="portfolio section githubstates " id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
             <!-- masai -->
-            <img style="opacity: 0;position: absolute;" id="github-stats-card"
-                src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en" alt="">
+                            <img id="github-top-langs" style="opacity: 0;position: absolute;"
+                src="https://github-readme-stats.vercel.app/api/top-langs/?username=riyaa-1099&lans-count=4" alt="">
             <!-- masai -->
 
             <div class="portfolio__container container swiper-container">
