--- a/index.html
+++ b/index.html
@@ -805,10 +805,7 @@
 
         <section class="portfolio section githubstates " id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
-            <!-- masai -->
-                            <img id="github-top-langs" style="opacity: 0;position: absolute;"
-                src="https://github-readme-stats.vercel.app/api/top-langs/?username=riyaa-1099&lans-count=4" alt="">
-            <!-- masai -->
+           
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper github-images">
@@ -818,7 +815,7 @@
 
 
                     <img  class="portfolio__content grid swiper-slide"
-                        src="https://github-readme-stats.vercel.app/api/top-langs?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
+                        src="https://github-readme-stats.vercel.app/api/top-langs/?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
                     <img class="portfolio__content grid swiper-slide"
