--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
 
         <section class="portfolio section githubstates " id="githubstates">
             <h2 class="section__title">GitHub Activities</h2>
-           
+          
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper github-images">
@@ -814,7 +814,7 @@
                         src="https://github-readme-streak-stats.herokuapp.com?user=07-Mayankraj&theme=github-dark&hide_border=true&date_format=j%20M%5B%20Y%5D" />
 
 
-                    <img  class="portfolio__content grid swiper-slide"
+                    <img id="github-top-langs" class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api/top-langs/?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
