--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--==================== FAVICON ====================-->
-    <link rel="icon" href="assets/img/tp.jpg">
+    <link rel="icon" href="assets/img/about.png">
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -26,45 +26,36 @@
 
 <body>
     <!--==================== HEADER ====================-->
-    <!-- masai -->
-   <div id="nav-menu" style="opacity: 0;">
-    <a href="#home" class="nav-link home">Home</a>
-    <a href="#about" class="nav-link about">About</a>
-    <a href="#skills" class="nav-link skills">Skills</a>
-    <a href="#projects" class="nav-link projects">Projects</a>
-    <a href="#contact" class="nav-link contact">Contact</a>
-    <a id="resume-button-1" style="display:none;" href="./assets/pdf/resume.pdf" class="nav-link resume"id="resume-button-1" download>Resume <i class="fa fa-download"></i></a>
-    </div>
-    <!-- masai -->
+ 
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">Mayank Raj</a>
-            <div class="nav__menu" >
+            <div class="nav__menu" id="nav-menu" >
                 <ul class="nav__list grid">
-                    <li class="nav__item nav-link home">
-                        <a class="nav__link" href="#home">
-                            <i class="uil uil-estate nav__icon"></i>    Home    </a>
+                    <li class="nav__item ">
+                        <a class="nav__link nav-link home" href="#home">
+                            <i class="uil uil-estate nav__icon"></i>Home</a>
                     </li>
-                    <li class="nav__item nav-link about">
-                        <a class="nav__link" href="#about ">
+                    <li class="nav__item ">
+                        <a class="nav__link nav-link about" href="#about ">
                             <i class="uil uil-user nav__icon"></i>About</a>
                     </li>
-                    <li class="nav__item nav-link skills">
-                        <a class="nav__link" href="#skills">
+                    <li class="nav__item ">
+                        <a class="nav__link nav-link skills" href="#skills">
                             <i class="uil uil-file-alt nav__icon"></i>Skills</a>
                     </li>
-                    <li class="nav__item nav-link projects">
-                        <a class="nav__link" href="#projects">
+                    <li class="nav__item ">
+                        <a class="nav__link nav-link projects" href="#projects">
                             <i class="uil uil-briefcase-alt nav__icon"></i>Projects</a>
                     </li>
-                    <li class="nav__item nav-link contact">
-                        <a class="nav__link" href="#contact">
+                    <li class="nav__item ">
+                        <a class="nav__link nav-link contact" href="#contact">
                             <i class="uil uil-link-alt nav__icon"></i>ContactMe</a>
                     </li>
                   
-                    <li class="nav__item nav-link resume">
-                        <a id="resume-link-1" download class="nav__link" target="_blank"
-                            href="https://drive.google.com/file/d/1OI8GWhlvyHDxnxdIaXEa2jF14FzoD3PT/view">
+                    <li class="nav__item ">
+                        <a id="resume-button-1" download class="nav__link nav-link resume" target="_blank"
+                            href="./assets/pdf/resume.pdf">
                             <i class="uil uil-file-blank nav__icon"></i>Resume
                         </a>
                     </li>
@@ -193,9 +184,9 @@
 
                     </div>
 
-
+                    
                     <div class="about__buttons" id="resume-button-2">
-                        <a id="resume-link-2" download="" href="assets/pdf/resume.pdf" target="_blank"
+                        <a id="resume-button-2" download="" href="assets/pdf/resume.pdf" target="_blank"
                             class="button button--flex">
                             Download CV<i class="uil uil-cloud-download button__icon"></i>&nbsp&nbsp
                         </a>
@@ -347,13 +338,13 @@
                 <div class="swiper-wrapper">
 
                     <!--==================== PORTFOLIO 1 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <figure class="portfolio__figure project-card">
-                            <img src="https://user-images.githubusercontent.com/87657007/214338799-dd8045ec-3cd5-4aec-82f7-f362396d0440.png"
-                                alt="" class="portfolio__img project-title">
+                    <div class="portfolio__content grid swiper-slide project-card">
+                        <figure class="portfolio__figure ">
+                            <img  src="https://user-images.githubusercontent.com/87657007/214338799-dd8045ec-3cd5-4aec-82f7-f362396d0440.png"
+                                alt="" class="skills-card-img  portfolio__img ">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title ">Firestone (clone)</h3>
+                            <h3 class="portfolio__title project-title  ">Firestone (clone)</h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Clone of Firestone which sells Tires, and automobile parts. <br>
                                 Developed fronted using Html5 | CSS3 | JavaScript and Back-End using Node | Express |
@@ -375,13 +366,13 @@
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <figure class="portfolio__figure project-card">
-                            <img src="https://user-images.githubusercontent.com/87657007/208608709-2b7d7b95-3336-4638-9ab4-0d2505d10a63.png"
-                                alt="" class="portfolio__img project-title">
+                    <div class="portfolio__content grid swiper-slide project-card">
+                        <figure class="portfolio__figure ">
+                            <img  src="https://user-images.githubusercontent.com/87657007/208608709-2b7d7b95-3336-4638-9ab4-0d2505d10a63.png"
+                                alt="" class="skills-card-img  portfolio__img ">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title ">SkinCure (clone) </h3>
+                            <h3 class="portfolio__title project-title  ">SkinCure (clone) </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Skincure is a clone of SkinStore,an online sales site for beauty products. <br>
                                 Tech stack : Html5 | CSS3 | JavaScript <br>
@@ -402,13 +393,13 @@
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <figure class="portfolio__figure project-card">
-                            <img src="https://user-images.githubusercontent.com/87657007/203859011-d9011312-61b1-4925-8ffb-c1a185b626d9.png"
-                                alt="" class="portfolio__img project-title">
+                    <div class="portfolio__content grid swiper-slide project-card">
+                        <figure class="portfolio__figure ">
+                            <img  src="https://user-images.githubusercontent.com/87657007/203859011-d9011312-61b1-4925-8ffb-c1a185b626d9.png"
+                                alt="" class="skills-card-img  portfolio__img ">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title ">ChargeBee (clone) </h3>
+                            <h3 class="portfolio__title project-title  ">ChargeBee (clone) </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 Billbee is a clone of chargeBee and it’s an online billing software
                                 service. <br>
@@ -429,13 +420,13 @@
                         </div>
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <figure class="portfolio__figure project-card">
-                            <img src="https://user-images.githubusercontent.com/87657007/218889120-c4cd6d3f-5335-4d51-afa5-93c607a3adb0.png"
-                                alt="" class="portfolio__img project-title">
+                    <div class="portfolio__content grid swiper-slide project-card">
+                        <figure class="portfolio__figure ">
+                            <img  src="https://user-images.githubusercontent.com/87657007/218889120-c4cd6d3f-5335-4d51-afa5-93c607a3adb0.png"
+                                alt="" class="skills-card-img  portfolio__img ">
                         </figure>
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title ">07-Mayankraj.io </h3>
+                            <h3 class="portfolio__title project-title  ">07-Mayankraj.io </h3>
                             <p class="portfolio__description project-tech-stack project-description">
                                 This is my personal portfolio. <br>
                                 I've used html css JavaScript to build it <br>
