--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                         src="https://github-readme-stats.vercel.app/api/top-langs/?username=07-Mayankraj&show_icons=true&locale=en&layout=compact&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
-                    <img class="portfolio__content grid swiper-slide"
+                    <img id="github-stats-card" class="portfolio__content grid swiper-slide"
                         src="https://github-readme-stats.vercel.app/api?username=07-Mayankraj&show_icons=true&locale=en&theme=github_dark&hide_border=true"
                         alt="ovi" />
 
