project-github-link

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                 transmission. <br>
                             </p>
                             <a href="https://github.com/07-Mayankraj/Firestone-clone" target="_blank"
-                                class="button button--flex button--small portfolio__button">
+                                class="project-github-link button button--flex  button--small portfolio__button">
                                 GitHubLink
                                 <i class="uil uil-github-alt button__icon"></i>&nbsp
                             </a>
@@ -381,7 +381,7 @@
                                 responsible for linking the pages. <br>
                             </p>
                             <a href="https://github.com/07-Mayankraj/SkinCure.com" target="_blank"
-                                class="button button--flex project-github-link button--small portfolio__button">
+                                class="project-github-link button button--flex  button--small portfolio__button">
                                 GitHubLink
                                 <i class="uil uil-github-alt button__icon"></i>&nbsp
                             </a>
@@ -408,7 +408,7 @@
                                 project
                             </p>
                             <a href="https://github.com/07-Mayankraj/ChargeBee-clone" target="_blank"
-                                class="button button--flex project-github-link button--small portfolio__button">
+                                class="project-github-link button button--flex  button--small portfolio__button">
                                 GitHubLink
                                 <i class="uil uil-github-alt button__icon"></i>&nbsp
                             </a>
@@ -436,7 +436,7 @@
                                     Bedimcode</a>
                             </p>
                             <a href="https://github.com/07-Mayankraj/07-Mayankraj.github.io" target="_blank"
-                                class="button button--flex project-github-link button--small portfolio__button">
+                                class="project-github-link button button--flex  button--small portfolio__button">
                                 GitHubLink
                                 <i class="uil uil-github-alt button__icon"></i>&nbsp
                             </a>
