--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                     
                     <div class="about__buttons" id="resume-button-2">
-                        <a id="resume-link-2" download="" href="assets/pdf/resume.pdf" target="_blank"
+                        <a id="resume-button-2" download="" href="assets/pdf/resume.pdf" target="_blank"
                             class="button button--flex">
                             Download CV<i class="uil uil-cloud-download button__icon"></i>&nbsp&nbsp
                         </a>
@@ -647,7 +647,7 @@
         </section>
         <br /><br />
 
-
+    
         <!--==================== GITHUB STATES ====================-->
 
         <section class="about section container react-activity-calendar" id="github">
