--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   
                     <li class="nav__item ">
                         <a id="resume-button-1" download class="nav__link nav-link resume" target="_blank"
-                            href="./assets/pdf/resume.pdf">
+                            href="./assets/pdf/Mayank_Raj_Resume.pdf">
                             <i class="uil uil-file-blank nav__icon"></i>Resume
                         </a>
                     </li>
@@ -186,7 +186,7 @@
 
             
             <div class="about__buttons" id="resume-button-2">
-                <a id="resume-button-2" download="" href="assets/pdf/resume.pdf" target="_blank"
+                <a id="resume-button-2" download="" href="assets/pdf/Mayank_Raj_Resume.pdf" target="_blank"
                     class="button button--flex">
                     Download CV<i class="uil uil-cloud-download button__icon"></i>&nbsp&nbsp
                 </a>
