--- a/index.html
+++ b/index.html
@@ -156,15 +156,17 @@
 
         <div class="about__data">
             <p class="about__description" id="user-detail-intro">
-                Hi! I'm Mayank, I have a degree in Computer Science from MLSU University,Udaipur.
+                Hi! I'm Mayank, I have a degree in Computer Science from MLSU University, Udaipur.
                 <br /><br />
-                Currently I'm Learing Full Stack Web Development at Masai School.
+                Currently, I'm Learning Full Stack Web Development at Masai School.
                 <br /><br />
-                An Inquisitive solution-driven Full Stack Web Developer.
-                Practised over 700 data structures and algorithms.
-                Having 1200+ hours of hands-on experience in coding and developing real-world web applications.
+                An Inquisitive solution-driven Full Stack Web Developer. 
+                Practiced over 700 data structures and algorithms. 
+                Having 1200+ hours of hands-on experience in coding and developing real-world web applications. 
                 Passionate about learning new technologies and methodologies.
                 <br /><br />
+
+
             </p>
 
             <div class="about__info">
